welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: '(' expected but identifier found.
  if weekday==true{
     ^sleepIn:5: error: illegal start of simple expression
} 
^